--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,12 +23,12 @@
         <item>Female</item>
         <item>Male</item>
     </string-array>
+
+    <string name="title_activity_landing">WoofWoofWoof!</string>
+
     <string name="title_activity_sign_up">SignUpActivity</string>
-    <!--
-    This string is used for square devices and overridden by hello_world in
-    values-round/strings.xml for round devices.
-    -->
-    <string name="hello_world">Hello Square World!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
