- added functionality to SignUpActivity.kt, click listeners and text retrieval in progress.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string-array name="gender_array">
         <item>Female</item>
         <item>Male</item>
+        <item>Unknown</item>
     </string-array>
 
     <string name="info1">Welcome to Woof! Where your dog can finally meet their new best friend, and possible forever playdate!</string>
