--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="title_activity_landing">WoofWoofWoof!</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 
 
 </resources>
